阅读 层次聚类算法

--- a/ELK/logstash/test/docker-elk/logstash.conf
+++ b/ELK/logstash/test/docker-elk/logstash.conf
@@ -1,4 +1,142 @@
+#20170714 ruby §|§
+input {
+	beats {
+		port => "5000"
+	}
+}
+
+filter {
+	ruby {
+		code => 'msgs = event.get("message").split("§|§")
+            event.set("time_local", msgs[0])
+            event.set("hostname", msgs[1])
+            event.set("remote_addr", msgs[2])
+            event.set("remote_port", msgs[3])
+            event.set("remote_user", msgs[4])
+            event.set("scheme", msgs[5])
+            event.set("request_method", msgs[6])
+            event.set("uri", msgs[7])
+            event.set("request_uri", msgs[8])
+            event.set("request_filename", msgs[9])
+            event.set("args", msgs[10])
+            event.set("http_user_agent", msgs[11])
+            event.set("http_referer", msgs[12])
+            event.set("http_x_forwarded_for", msgs[13])
+            event.set("content_length", msgs[14])
+            event.set("content_type", msgs[15])
+            event.set("body_bytes_sent", msgs[16])
+            event.set("request_body", msgs[17])
+            event.set("status", msgs[18])
+            event.set("server_addr", msgs[19])
+            event.set("server_name", msgs[20])
+            event.set("server_port", msgs[21])
+            event.set("server_protocol", msgs[22])
+            event.set("request_time", msgs[23])
+            event.set("upstream_response_time", msgs[24])
+            event.set("proxy_add_x_forwarded_for", msgs[25])
+            event.set("upstream_addr", msgs[26])
+        '
+	}
+	mutate {
+		convert => [
+			"body_bytes_sent", "integer",
+			"content_length", "integer",
+			"server_port", "integer",
+			"remote_port", "integer",
+			"status", "integer",
+			"upstream_response_time", "float",
+			"request_time", "float"
+		]
+	}
+	mutate {
+		add_field => {
+			"uris" => "%{uri}"
+		}
+	}
+	mutate {
+		split => {
+			"uris" => "."
+		}
+		add_field => {
+			"request_type" => "%{uris[-1]}"
+		}
+	}
+}
+output {
+	elasticsearch {
+		hosts => "elasticsearch:9200"
+	}
+	stdout {
+		codec => rubydebug
+	}
+}
+
+
+
+
+#20170714 split §|§ mutate
+input {
+    beats {
+        port => "5000"
+    }
+}
+
+filter {
+     mutate {
+          split=>["message","§|§"]
+                add_field => {"time_local" => "%{[message][0]}"} 
+                add_field => {"hostname" => "%{[message][1]}"}
+                add_field => {"remote_addr" => "%{[message][2]}"}
+                add_field => {"remote_port" => "%{[message][3]}"}
+                add_field => {"remote_user" => "%{[message][4]}"}
+                add_field => {"scheme" => "%{[message][5]}"}
+                add_field => {"request_method" => "%{[message][6]}"}
+                add_field => {"uri" => "%{[message][7]}"}
+                add_field => {"request_uri" => "%{[message][8]}"}
+                add_field => {"request_filename" => "%{[message][9]}"}
+                add_field => {"args" => "(%{[message][10]})"}
+                add_field => {"http_user_agent" => "%{[message][11]}"}
+                add_field => {"http_referer" => "%{[message][12]}"}
+                add_field => {"http_x_forwarded_for" => "%{[message][13]}"}
+                add_field => {"content_length" => "%{[message][14]}"}
+                add_field => {"content_type" => "%{[message][15]}"}
+                add_field => {"body_bytes_sent" => "%{[message][16]}"}
+                add_field => {"request_body" => "%{[message][17]}"}
+                add_field => {"status" => "%{[message][18]}"}
+                add_field => {"server_addr" => "%{[message][19]}"}
+                add_field => {"server_name" => "%{[message][20]}"}
+                add_field => {"server_port" => "%{[message][21]}"}
+                add_field => {"server_protocol" => "%{[message][22]}"}
+                add_field => {"request_time" => "%{[message][23]}"}
+                add_field => {"upstream_response_time" => "%{[message][24]}"}
+                add_field => {"proxy_add_x_forwarded_for" => "%{[message][25]}"}
+                add_field => {"upstream_addr" => "%{[message][26]}"}
+                #remove_field => ["message"]
+        }	
+    mutate {
+	  add_field => {
+        "uris" => "%{uri}"
+      }
+	}
+    mutate {
+      split => { "uris" => "." }
+      add_field => {
+       "request_type" => "%{uris[-1]}"
+      }
+    }
+}
+output {
+    elasticsearch {
+        hosts => "elasticsearch:9200"
+    }
+    stdout{codec => rubydebug}
+}
+
+
+
+
 #20170714 split uris 无法处理/data/html/www/cloud/webjars/springfox-swagger-ui/swagger-ui.min.js -1
+#%{uris[-1]} 取尾部的值
 input {
     beats {
         port => "5000"
