--- a/ELK/logstash/test/docker-elk/logstash.conf
+++ b/ELK/logstash/test/docker-elk/logstash.conf
@@ -1,3 +1,65 @@
+#20170715 ruby request_type
+input {
+	beats {
+		port => "5000"
+	}
+}
+
+filter {
+	ruby {
+		code => 'msgs = event.get("message").split("§|§")
+            event.set("time_local", msgs[0])
+            event.set("hostname", msgs[1])
+            event.set("remote_addr", msgs[2])
+            event.set("remote_port", msgs[3])
+            event.set("remote_user", msgs[4])
+            event.set("scheme", msgs[5])
+            event.set("request_method", msgs[6])
+            event.set("uri", msgs[7])
+            event.set("request_uri", msgs[8])
+            event.set("request_filename", msgs[9])
+            event.set("args", msgs[10])
+            event.set("http_user_agent", msgs[11])
+            event.set("http_referer", msgs[12])
+            event.set("http_x_forwarded_for", msgs[13])
+            event.set("content_length", msgs[14])
+            event.set("content_type", msgs[15])
+            event.set("body_bytes_sent", msgs[16])
+            event.set("request_body", msgs[17])
+            event.set("status", msgs[18])
+            event.set("server_addr", msgs[19])
+            event.set("server_name", msgs[20])
+            event.set("server_port", msgs[21])
+            event.set("server_protocol", msgs[22])
+            event.set("request_time", msgs[23])
+            event.set("upstream_response_time", msgs[24])
+            event.set("proxy_add_x_forwarded_for", msgs[25])
+            event.set("upstream_addr", msgs[26])
+            event.set("request_type", msgs[7].split(".").last)
+        '
+	}
+	mutate {
+		convert => [
+			"body_bytes_sent", "integer",
+			"content_length", "integer",
+			"server_port", "integer",
+			"remote_port", "integer",
+			"status", "integer",
+			"upstream_response_time", "float",
+			"request_time", "float"
+		]
+	}
+}
+output {
+	elasticsearch {
+		hosts => "elasticsearch:9200"
+	}
+	stdout {
+		codec => rubydebug
+	}
+}
+
+
 #20170714 ruby §|§
 input {
 	beats {
