--- a/system/linux/ELK/docker/fluent-docker-compose/docker-compose.yml
+++ b/system/linux/ELK/docker/fluent-docker-compose/docker-compose.yml
@@ -18,6 +18,8 @@ services:
 
   elasticsearch:
     image: elasticsearch
+    ports:
+      - "9200:9200"
     volumes:
     - /opt/elk/esdata:/usr/share/elasticsearch/data
 
