--- a/system/linux/ELK/docker/fluent/fluent-docker-compose/fluentd/conf/fluent.conf
+++ b/system/linux/ELK/docker/fluent/fluent-docker-compose/fluentd/conf/fluent.conf
@@ -1,7 +1,15 @@
+# fluentd/conf/fluent.conf
 <source>
   @type forward
   port 24224
   bind 0.0.0.0
+</source>
+<source>
+  @type tail
+  path /var/log/messages
+  pos_file /var/log/td-agent/httpd-access.log.pos
+  tag systemd
+  format json
 </source>
 
 <match *.**>
