--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
         "deque": "cpp",
         "vector": "cpp"
     },
-    "python.pythonPath": "C:\\Python36\\python.exe"
+    "python.pythonPath": "c:\\Python27\\python.exe"
 }
